--- a/src/index.html
+++ b/src/index.html
@@ -34,40 +34,40 @@
             </form>
         </div>
     </nav>
-    <p id="showScroll">
+    <!-- <p id="showScroll">
         as
-    </p>
+    </p> -->
 
     <ul class="event">
-        <li class="small small_top" data-pos="2">
+        <li class="small small_top" data-pos="2" data-current-pos="2">
             <h3 class="place">Стадион</h3>
             <h2 class="date">30</h2>
             <h3 class="month">Сентября</h3>
             <h3 class="time">19:00</h3>
             <a href="#" class="btn btn-info">Купить билет</a>
         </li>
-        <li class="middle middle_top" data-pos="1">
+        <li class="middle middle_top" data-pos="1" data-current-pos="1">
             <h3 class="place">Стадион</h3>
             <h2 class="date">16</h2>
             <h3 class="month">Июля</h3>
             <h3 class="time">19:00</h3>
             <a href="#" class="btn btn-info">Купить билет</a>
         </li>
-        <li class="active" data-pos="0">
+        <li class="active" data-pos="0" data-current-pos="0">
             <h3 class="place">Стадион</h3>
             <h2 class="date">26</h2>
             <h3 class="month">Июня</h3>
             <h3 class="time">19:00</h3>
             <a href="#" class="btn btn-info">Купить билет</a>
         </li>
-        <li class="middle middle_bottom" data-pos="-1">
+        <li class="middle middle_bottom" data-pos="-1" data-current-pos="-1">
             <h3 class="place">Стадион</h3>
             <h2 class="date">17</h2>
             <h3 class="month">Июня</h3>
             <h3 class="time">19:00</h3>
             <a href="#" class="btn btn-info">Купить билет</a>
         </li>
-        <li class="small  small_bottom" data-pos="-2">
+        <li class="small  small_bottom" data-pos="-2" data-current-pos="-2">
             <h3 class="place">Стадион</h3>
             <h2 class="date">30</h2>
             <h3 class="month">Мая</h3>
